Sistemazione Webcam Front-End

--- a/public/index.html
+++ b/public/index.html
@@ -30,7 +30,7 @@
         <div class="nav-wrapper">
             <a href="/" class="brand-logo" style="font-family: 'Montserrat', sans-serif; font-weight: 800;">ArucoAI</a>
             <ul id="nav-mobile" style="font-family: 'Montserrat', sans-serif; font-weight: 400;" class="right hide-on-med-and-down">
-              <li><a href="./chisiamo">Chi siamo?</a></li>
+              <li><a href="./chisiamo">Chi siamo</a></li>
               <li><a href="./imagearuco">Image Detection</a></li>
               <li><a href="./streamaruco">Streaming Detection</a></li>
               <li><a href="./webcamaruco">Webcam Detection</a></li>
