--- a/public/index.html
+++ b/public/index.html
@@ -61,7 +61,7 @@
                 <a href="imagearuco"><img class="activator" src="./img/imageimg.svg" style="padding: 20px 60px 0px 60px"></a>
               </div>
               <div class="card-content">
-                <span class="card-title activator grey-text text-darken-4">Image<i class="material-icons right">more_vert</i></span>
+                <span class="card-title activator grey-text text-darken-4">Image</span>
                 <p><a href="imagearuco">Clicca qui</a></p>
               </div>
             </div>
@@ -74,7 +74,7 @@
                 <a href="streamaruco"><img class="activator" src="./img/streamvid.svg" style="padding: 20px 60px 0px 60px"></a>
               </div>
               <div class="card-content">
-                <span class="card-title activator grey-text text-darken-4">Stream<i class="material-icons right">more_vert</i></span>
+                <span class="card-title activator grey-text text-darken-4">Stream</span>
                 <p><a href="streamaruco">Clicca qui</a></p>
               </div>
             </div>
@@ -87,7 +87,7 @@
                 <a href="webcamaruco"><img class="activator" src="./img/webcamweb.png" style="padding: 20px 60px 0px 60px"></a>
               </div>
               <div class="card-content">
-                <span class="card-title activator grey-text text-darken-4">Webcam<i class="material-icons right">more_vert</i></span>
+                <span class="card-title activator grey-text text-darken-4">Webcam</span>
                 <p><a href="webcamaruco">Clicca qui</a></p>
               </div>
             </div>
