Streaming quasi finito

--- a/public/webcamaruco.html
+++ b/public/webcamaruco.html
@@ -51,6 +51,7 @@
             <button class="waves-effect waves-light btn teal darken-4 col s12 m4 l2 offset-m4" id="webcambtn">Avvia webcam</button>  
             <canvas class="real"></canvas>
             <canvas class="fake" style="display: none;"></canvas>
+            <canvas class="fake2" style="display: none;"></canvas>
         </div>
     </div>
 
