aggiustati i footer di tutte le pagine

--- a/public/imagearuco.html
+++ b/public/imagearuco.html
@@ -39,6 +39,7 @@
     </ul>
     <!--FINE NAVBAR + SIDENAV-->
     <!--Scegli file-->
+    <div class="header-custom">
     <div class="container">
       <br>
       <br>
@@ -70,6 +71,7 @@
         </div>
 
     </div>
+  </div>
     <!--FOOTER-->
     <footer class="page-footer">
       <div class="container">
