--- a/public/streamaruco.html
+++ b/public/streamaruco.html
@@ -39,6 +39,7 @@
     </ul>
     <!--FINE NAVBAR + SIDENAV-->
     <!--Scegli file-->
+    <div class="header-custom">
     <div class="container">
       <br>
       <br>
@@ -56,7 +57,7 @@
             <img src="" style="width: 100%;" id="fake">
         </div>
     </div>
-
+  </div>
     <!--FOOTER-->
     <footer class="page-footer">
       <div class="container">
