--- a/public/webcamaruco.html
+++ b/public/webcamaruco.html
@@ -39,6 +39,7 @@
     </ul>
     <!--FINE NAVBAR + SIDENAV-->
     <!--Scegli file-->
+    <div class="header-custom">
     <div class="container">
       <br>
       <br>
@@ -57,8 +58,7 @@
       <div class="col l6 m6 s12 offset-l6 offset-m6"><img style="width: 100%" src="./img/ciao.jpg" id="result"></div>
      </div>
     </div>
-    
-
+  </div>
     <!--FOOTER-->
     <footer class="page-footer">
       <div class="container">
