--- a/public/error.html
+++ b/public/error.html
@@ -2,7 +2,7 @@
   <section style="display: flex; justify-content: center; align-items: center;">
     <div class="container">
       <div style="max-width: 850px;">
-        <img class="image" src="https://omjsblog.files.wordpress.com/2023/07/errorimg.png" alt="" style="width: 100%; height: auto;">
+        <img class="image" src="./img/errorimg.png" alt="" style="width: 100%; height: auto;">
       </div>
     </div>
     <div class="text" style="margin-left: 40px;"> <!-- Aggiunto un margine sinistro per separare l'immagine dal testo -->
