--- a/public/chisiamo.html
+++ b/public/chisiamo.html
@@ -53,7 +53,7 @@
   <div class="header-custom">
     <div class="container">
       <div class="row">
-        <div class="col s12" style="text-align: center;">
+        <div class="col s12">
           <h1>Chi siamo</h1>
           <div class="description">
             <main>
