Streaming da sovrapporre a scelta completato

--- a/public/streamaruco.html
+++ b/public/streamaruco.html
@@ -52,9 +52,8 @@
             <button class="waves-effect waves-light btn teal darken-4 col s12 m4 l2 offset-m4" id="streambtn">Scansiona</button>            
           </div>
         <div class="row" style="margin-top: 10px;">
-            <div id="img-preview" class="col l6 m6 s12"></div>
-            <div class="col l6 m6 s12"><img style="width: 100%" src="./img/ciao.jpg" id="result"></div>
-            <img src="" style="width: 100%;" id="fake">
+            <div class="col l6 m6 s6"><img style="width: 100%" src="./img/ciao.jpg" id="result"></div>
+            <img src="" style="width: 100%; display: none;" id="fake">
         </div>
     </div>
   </div>
