--- a/public/webcamaruco.html
+++ b/public/webcamaruco.html
@@ -53,10 +53,10 @@
             <button class="waves-effect waves-light btn teal darken-4 col s12 m4 l2 offset-m4" id="webcambtn">Avvia webcam</button>  
             <canvas class="real"></canvas>
             <canvas class="fake" style="display: none;"></canvas>
-            <canvas class="fake2" style="display: none;"></canvas>
+            <img src="" style="width: 100%; display: none;" class="fake2">
+            
         </div>
         <div class="row" style="margin-top: 10px;">
-      <div class="col l6 m6 s12 offset-l6 offset-m6"><img style="width: 100%" src="./img/ciao.jpg" id="result"></div>
      </div>
     </div>
   </div>
