Aggiunta la parte frontend per il slider della grandezza degli aruco

--- a/public/streamaruco.html
+++ b/public/streamaruco.html
@@ -52,6 +52,8 @@
             <button class="waves-effect waves-light btn teal darken-4 col s12 m4 l2 offset-m4" id="streambtn">Scansiona</button>            
           </div>
         <div class="row" style="margin-top: 10px;">
+          <h4 style="font-family: 'Montserrat', sans-serif; font-weight: 400;">Scegli la grandezza del frame da incollare:</h4>
+            <input type="range" min="1" max="10" value="1" id="ArucoSlider">
             <div class="col l6 m6 s6"><img style="width: 100%" src="./img/ciao.jpg" id="result"></div>
             <img src="" style="width: 100%; display: none;" id="fake">
         </div>
