--- a/public/imagearuco.html
+++ b/public/imagearuco.html
@@ -85,16 +85,14 @@
             <ul>
               <li><a class="grey-text text-lighten-3" href="https://www.ibm.com/it-it/topics/computer-vision" target="_blank">Documentazione Computer Vision</a></li>
               <li><a class="grey-text text-lighten-3" href="https://docs.opencv.org/4.x/d5/dae/tutorial_aruco_detection.html" target="_blank">Documentazione Aruco</a></li>
-              <li><a class="grey-text text-lighten-3" href="https://chev.me/arucogen/" target="_blank">Generatore Aruco</a></li>              
-              <li><a class="grey-text text-lighten-3" href="#!" target="_blank">Link 4</a></li>
+              <li><a class="grey-text text-lighten-3" href="https://chev.me/arucogen/" target="_blank">Generatore Aruco</a></li>
             </ul>
           </div>
         </div>
       </div>
       <div class="footer-copyright">
         <div class="container">
-        © 2024 Copyright Text
-        <a class="grey-text text-lighten-4 right" href="#!">More Links</a>
+        © 2024 Copyright Texty
         </div>
       </div>
     </footer>
