--- a/public/index.html
+++ b/public/index.html
@@ -33,7 +33,7 @@
               <li><a href="./chisiamo">Chi siamo</a></li>
               <li><a href="./imagearuco">Image Detection</a></li>
               <li><a href="./streamaruco">Streaming Detection</a></li>
-              <li><a href="./webcamaruco">Webcam Detection</a></li>
+              <li><a href="./wrtcaruco">Webcam Detection</a></li>
               <li><a href="https://github.com/pokead/Aruco-Detector" target="_blank">Project</a></li>           
             </ul>
             <a href="#" data-target="slide-out" class="sidenav-trigger"><i class="material-icons">menu</i></a>
@@ -43,7 +43,7 @@
         <li><a href="./chisiamo">Chi siamo</a></li>
         <li><a href="./imagearuco">Image Detection</a></li>
         <li><a href="./streamaruco">Stream Detection</a></li>
-        <li><a href="./webcamaruco">Webcam Detection</a></li>
+        <li><a href="./wrtcaruco">Webcam Detection</a></li>
         <li><a href="https://github.com/pokead/Aruco-Detector" target="_blank">Project</a></li>
     </ul>
     <!--FINE NAVBAR + SIDENAV-->
@@ -84,11 +84,11 @@
           <div class="col l6 m6 s12 valign-wrapper">
             <div class="card" style="height: 450px; width: 500px">
               <div class="card-image waves-effect waves-block waves-light">
-                <a href="webcamaruco"><img class="activator" src="./img/webcamweb.png" style="padding: 20px 60px 0px 60px"></a>
+                <a href="wrtcaruco"><img class="activator" src="./img/webcamweb.png" style="padding: 20px 60px 0px 60px"></a>
               </div>
               <div class="card-content">
                 <span class="card-title activator grey-text text-darken-4">Webcam</span>
-                <p><a href="webcamaruco">Clicca qui</a></p>
+                <p><a href="wrtcaruco">Clicca qui</a></p>
               </div>
             </div>
           </div>
